--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-protobuf
-pandas
+protobuf==5.26.1
+ortools==9.9.3963
+amqtt==0.11.0b1
+pandas==2.2.2
 pyarrow
 inflection
 brotli
 openpyxl
-ortools
-black
