--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,18 @@ protobuf==5.26.1
 ortools==9.9.3963
 amqtt==0.11.0b1
 pandas==2.2.2
+bitarray==2.7.3
+matplotlib==3.6.2
+matplotlib-inline==0.1.6
+numpy==1.24.1
+tabulate==0.9.0
 pyarrow
 inflection
 brotli
 openpyxl
+zstd
+zopflipy
+pyliblzfse
+bzip3
+nlzss11
+deflate
